setup new datagen